--- a/src/css/index.css
+++ b/src/css/index.css
@@ -71,7 +71,7 @@ main {
     font-weight: bold;
     text-decoration: none;
     color: var(--cor-branco);
-    background-color: var(--cor-laranja-cafe);
+    background-color: var(--cor-cafe-escuro);
     border-radius: 5px;
     transition: 0.3s ease-in-out;
 }
