--- a/src/css/app.css
+++ b/src/css/app.css
@@ -84,6 +84,32 @@ section {
     border-radius: 4px;
 }
 
+/* Estilos para o modal de edição */
+#modalEdicao .modal-content {
+    background-color: #FEFAF6;
+    color: #242424;
+  }
+  
+  #modalEdicao .btn-primary {
+    background-color: #118C5F;
+    border-color: #118C5F;
+  }
+  
+  #modalEdicao .btn-secondary {
+    background-color: #6e6d6d;
+    border-color: #6e6d6d;
+  }
+
+  #modalEdicao {
+    z-index: 1060; /* Bootstrap modals usam 1050 por padrão, então precisamos de um valor maior */
+  }
+  
+  /* Se ainda persistir, adicione também: */
+  .modal-backdrop {
+    z-index: 1040; /* Garante que o backdrop fique atrás do modal de edição */
+  }
+  
+
 .modal-body {
     gap: 1rem;
 }
